Several updates for features and bugfixes

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-    <title>Poseidon Control</title>
+    <title>Doris</title>
 
     <!-- CSS  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -27,7 +27,7 @@
 <div class="navbar-fixed">
     <nav class="purple lighten-2" role="navigation">
         <div class="nav-wrapper container">
-            <a id="logo-container" href="#" class="brand-logo">Poseidon</a>
+            <a id="logo-container" href="#" class="brand-logo">Doris</a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="#status">Status</a></li>
                 <li><a href="#controls">Controls</a></li>
